InterpEdited/Interp_CSharp/InterpParser.cs
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 Interp.g 2009-10-12 16:05:42


using System.Collections.Generic;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

public class InterpParser : Parser 
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"ASSIGNMENT", 
		"END_OF_STATEMENT", 
		"PARALLEL", 
		"OPENBRACE", 
		"CLOSEBRACE", 
		"MATINDEX", 
		"LOOP", 
		"MATVAR", 
		"MATVAL", 
		"VARIABLE", 
		"INT_LITERAL", 
		"PLUS", 
		"MULTIPLY", 
		"WHITESPACE", 
		"'print'"
    };

    public const int MATVAR = 11;
    public const int OPENBRACE = 7;
    public const int INT_LITERAL = 14;
    public const int VARIABLE = 13;
    public const int MATVAL = 12;
    public const int T__18 = 18;
    public const int MULTIPLY = 16;
    public const int CLOSEBRACE = 8;
    public const int LOOP = 10;
    public const int PARALLEL = 6;
    public const int WHITESPACE = 17;
    public const int PLUS = 15;
    public const int ASSIGNMENT = 4;
    public const int EOF = -1;
    public const int END_OF_STATEMENT = 5;
    public const int MATINDEX = 9;

    // delegates
    // delegators



        public InterpParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public InterpParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
       }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return InterpParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "Interp.g"; }
    }


    public class program_return : ParserRuleReturnScope
    {
        public List<Element> ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "program"
    // Interp.g:29:1: program returns [List<Element> ret] : ( expr )+ ;
    public InterpParser.program_return program() // throws RecognitionException [1]
    {   
        InterpParser.program_return retval = new InterpParser.program_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        InterpParser.expr_return expr1 = null;




          retval.ret = new List<Element>();

        try 
    	{
            // Interp.g:33:3: ( ( expr )+ )
            // Interp.g:33:5: ( expr )+
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// Interp.g:33:5: ( expr )+
            	int cnt1 = 0;
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == PARALLEL || LA1_0 == MATVAR || LA1_0 == VARIABLE || LA1_0 == 18) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // Interp.g:33:6: expr
            			    {
            			    	PushFollow(FOLLOW_expr_in_program74);
            			    	expr1 = expr();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, expr1.Tree);
            			    	retval.ret.Add(((expr1 != null) ? expr1.ret : null)); 

            			    }
            			    break;

            			default:
            			    if ( cnt1 >= 1 ) goto loop1;
            		            EarlyExitException eee1 =
            		                new EarlyExitException(1, input);
            		            throw eee1;
            	    }
            	    cnt1++;
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "program"

    public class expr_return : ParserRuleReturnScope
    {
        public Element ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "expr"
    // Interp.g:35:1: expr returns [Element ret] : ( assignment | print | matdecelement | matmul | parallel );
    public InterpParser.expr_return expr() // throws RecognitionException [1]
    {   
        InterpParser.expr_return retval = new InterpParser.expr_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        InterpParser.assignment_return assignment2 = null;

        InterpParser.print_return print3 = null;

        InterpParser.matdecelement_return matdecelement4 = null;

        InterpParser.matmul_return matmul5 = null;

        InterpParser.parallel_return parallel6 = null;



        try 
    	{
            // Interp.g:36:3: ( assignment | print | matdecelement | matmul | parallel )
            int alt2 = 5;
            switch ( input.LA(1) ) 
            {
            case VARIABLE:
            	{
                alt2 = 1;
                }
                break;
            case 18:
            	{
                alt2 = 2;
                }
                break;
            case MATVAR:
            	{
                int LA2_3 = input.LA(2);

                if ( (LA2_3 == MATVAL) )
                {
                    alt2 = 3;
                }
                else if ( (LA2_3 == ASSIGNMENT) )
                {
                    alt2 = 4;
                }
                else 
                {
                    NoViableAltException nvae_d2s3 =
                        new NoViableAltException("", 2, 3, input);

                    throw nvae_d2s3;
                }
                }
                break;
            case PARALLEL:
            	{
                alt2 = 5;
                }
                break;
            	default:
            	    NoViableAltException nvae_d2s0 =
            	        new NoViableAltException("", 2, 0, input);

            	    throw nvae_d2s0;
            }

            switch (alt2) 
            {
                case 1 :
                    // Interp.g:36:5: assignment
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_assignment_in_expr93);
                    	assignment2 = assignment();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, assignment2.Tree);
                    	retval.ret = ((assignment2 != null) ? assignment2.ret : null);

                    }
                    break;
                case 2 :
                    // Interp.g:37:5: print
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_print_in_expr101);
                    	print3 = print();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, print3.Tree);
                    	 retval.ret = ((print3 != null) ? print3.ret : null); 

                    }
                    break;
                case 3 :
                    // Interp.g:38:5: matdecelement
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_matdecelement_in_expr109);
                    	matdecelement4 = matdecelement();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, matdecelement4.Tree);
                    	 retval.ret = ((matdecelement4 != null) ? matdecelement4.ret : null); 

                    }
                    break;
                case 4 :
                    // Interp.g:39:5: matmul
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_matmul_in_expr119);
                    	matmul5 = matmul();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, matmul5.Tree);
                    	 retval.ret =  ((matmul5 != null) ? matmul5.ret : null);  

                    }
                    break;
                case 5 :
                    // Interp.g:40:5: parallel
                    {
                    	root_0 = (object)adaptor.GetNilNode();

                    	PushFollow(FOLLOW_parallel_in_expr131);
                    	parallel6 = parallel();
                    	state.followingStackPointer--;

                    	adaptor.AddChild(root_0, parallel6.Tree);
                    	 retval.ret = ((parallel6 != null) ? parallel6.ret : null);

                    }
                    break;

            }
            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "expr"

    public class assignment_return : ParserRuleReturnScope
    {
        public AssignmentOperationElement ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "assignment"
    // Interp.g:45:1: assignment returns [AssignmentOperationElement ret] : variable ASSIGNMENT ( var_or_int_literal | addition | multiplication ) END_OF_STATEMENT ;
    public InterpParser.assignment_return assignment() // throws RecognitionException [1]
    {   
        InterpParser.assignment_return retval = new InterpParser.assignment_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken ASSIGNMENT8 = null;
        IToken END_OF_STATEMENT12 = null;
        InterpParser.variable_return variable7 = null;

        InterpParser.var_or_int_literal_return var_or_int_literal9 = null;

        InterpParser.addition_return addition10 = null;

        InterpParser.multiplication_return multiplication11 = null;


        object ASSIGNMENT8_tree=null;
        object END_OF_STATEMENT12_tree=null;


          retval.ret = new AssignmentOperationElement();

        try 
    	{
            // Interp.g:49:3: ( variable ASSIGNMENT ( var_or_int_literal | addition | multiplication ) END_OF_STATEMENT )
            // Interp.g:49:5: variable ASSIGNMENT ( var_or_int_literal | addition | multiplication ) END_OF_STATEMENT
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_variable_in_assignment157);
            	variable7 = variable();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, variable7.Tree);
            	 retval.ret.setLhs(((variable7 != null) ? variable7.ret : null)); 
            	ASSIGNMENT8=(IToken)Match(input,ASSIGNMENT,FOLLOW_ASSIGNMENT_in_assignment165); 
            		ASSIGNMENT8_tree = (object)adaptor.Create(ASSIGNMENT8);
            		adaptor.AddChild(root_0, ASSIGNMENT8_tree);

            	// Interp.g:51:5: ( var_or_int_literal | addition | multiplication )
            	int alt3 = 3;
            	int LA3_0 = input.LA(1);

            	if ( (LA3_0 == VARIABLE) )
            	{
            	    switch ( input.LA(2) ) 
            	    {
            	    case END_OF_STATEMENT:
            	    	{
            	        alt3 = 1;
            	        }
            	        break;
            	    case MULTIPLY:
            	    	{
            	        alt3 = 3;
            	        }
            	        break;
            	    case PLUS:
            	    	{
            	        alt3 = 2;
            	        }
            	        break;
            	    	default:
            	    	    NoViableAltException nvae_d3s1 =
            	    	        new NoViableAltException("", 3, 1, input);

            	    	    throw nvae_d3s1;
            	    }

            	}
            	else if ( (LA3_0 == INT_LITERAL) )
            	{
            	    switch ( input.LA(2) ) 
            	    {
            	    case END_OF_STATEMENT:
            	    	{
            	        alt3 = 1;
            	        }
            	        break;
            	    case PLUS:
            	    	{
            	        alt3 = 2;
            	        }
            	        break;
            	    case MULTIPLY:
            	    	{
            	        alt3 = 3;
            	        }
            	        break;
            	    	default:
            	    	    NoViableAltException nvae_d3s2 =
            	    	        new NoViableAltException("", 3, 2, input);

            	    	    throw nvae_d3s2;
            	    }

            	}
            	else 
            	{
            	    NoViableAltException nvae_d3s0 =
            	        new NoViableAltException("", 3, 0, input);

            	    throw nvae_d3s0;
            	}
            	switch (alt3) 
            	{
            	    case 1 :
            	        // Interp.g:51:6: var_or_int_literal
            	        {
            	        	PushFollow(FOLLOW_var_or_int_literal_in_assignment173);
            	        	var_or_int_literal9 = var_or_int_literal();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, var_or_int_literal9.Tree);
            	        	retval.ret.setRhs(((var_or_int_literal9 != null) ? var_or_int_literal9.ret : null)); 

            	        }
            	        break;
            	    case 2 :
            	        // Interp.g:52:7: addition
            	        {
            	        	PushFollow(FOLLOW_addition_in_assignment184);
            	        	addition10 = addition();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, addition10.Tree);
            	        	retval.ret.setRhs(((addition10 != null) ? addition10.ret : null)); 

            	        }
            	        break;
            	    case 3 :
            	        // Interp.g:53:7: multiplication
            	        {
            	        	PushFollow(FOLLOW_multiplication_in_assignment194);
            	        	multiplication11 = multiplication();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, multiplication11.Tree);
            	        	 retval.ret.setRhs(((multiplication11 != null) ? multiplication11.ret : null)); 

            	        }
            	        break;

            	}

            	END_OF_STATEMENT12=(IToken)Match(input,END_OF_STATEMENT,FOLLOW_END_OF_STATEMENT_in_assignment206); 
            		END_OF_STATEMENT12_tree = (object)adaptor.Create(END_OF_STATEMENT12);
            		adaptor.AddChild(root_0, END_OF_STATEMENT12_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "assignment"

    public class matmul_return : ParserRuleReturnScope
    {
        public MatMul ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "matmul"
    // Interp.g:56:1: matmul returns [MatMul ret] : matvar ASSIGNMENT ( matmultiplication | mataddition ) ;
    public InterpParser.matmul_return matmul() // throws RecognitionException [1]
    {   
        InterpParser.matmul_return retval = new InterpParser.matmul_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken ASSIGNMENT14 = null;
        InterpParser.matvar_return matvar13 = null;

        InterpParser.matmultiplication_return matmultiplication15 = null;

        InterpParser.mataddition_return mataddition16 = null;


        object ASSIGNMENT14_tree=null;


        retval.ret = new MatMul();

        try 
    	{
            // Interp.g:60:1: ( matvar ASSIGNMENT ( matmultiplication | mataddition ) )
            // Interp.g:61:1: matvar ASSIGNMENT ( matmultiplication | mataddition )
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_matvar_in_matmul227);
            	matvar13 = matvar();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, matvar13.Tree);
            	 retval.ret.setLhs(((matvar13 != null) ? matvar13.ret : null));   
            	ASSIGNMENT14=(IToken)Match(input,ASSIGNMENT,FOLLOW_ASSIGNMENT_in_matmul232); 
            		ASSIGNMENT14_tree = (object)adaptor.Create(ASSIGNMENT14);
            		adaptor.AddChild(root_0, ASSIGNMENT14_tree);

            	// Interp.g:63:1: ( matmultiplication | mataddition )
            	int alt4 = 2;
            	int LA4_0 = input.LA(1);

            	if ( (LA4_0 == MATVAR) )
            	{
            	    int LA4_1 = input.LA(2);

            	    if ( (LA4_1 == PLUS) )
            	    {
            	        alt4 = 2;
            	    }
            	    else if ( (LA4_1 == MULTIPLY) )
            	    {
            	        alt4 = 1;
            	    }
            	    else 
            	    {
            	        NoViableAltException nvae_d4s1 =
            	            new NoViableAltException("", 4, 1, input);

            	        throw nvae_d4s1;
            	    }
            	}
            	else 
            	{
            	    NoViableAltException nvae_d4s0 =
            	        new NoViableAltException("", 4, 0, input);

            	    throw nvae_d4s0;
            	}
            	switch (alt4) 
            	{
            	    case 1 :
            	        // Interp.g:63:3: matmultiplication
            	        {
            	        	PushFollow(FOLLOW_matmultiplication_in_matmul260);
            	        	matmultiplication15 = matmultiplication();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, matmultiplication15.Tree);
            	        	 retval.ret.setRhs(((matmultiplication15 != null) ? matmultiplication15.ret : null)); 

            	        }
            	        break;
            	    case 2 :
            	        // Interp.g:65:2: mataddition
            	        {
            	        	PushFollow(FOLLOW_mataddition_in_matmul272);
            	        	mataddition16 = mataddition();
            	        	state.followingStackPointer--;

            	        	adaptor.AddChild(root_0, mataddition16.Tree);
            	        	 retval.ret.setRhs(((mataddition16 != null) ? mataddition16.ret : null)); 

            	        }
            	        break;

            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "matmul"

    public class parallel_return : ParserRuleReturnScope
    {
        public Parallel_For ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "parallel"
    // Interp.g:68:1: parallel returns [Parallel_For ret] : PARALLEL loop OPENBRACE matscalassignment CLOSEBRACE END_OF_STATEMENT ;
    public InterpParser.parallel_return parallel() // throws RecognitionException [1]
    {   
        InterpParser.parallel_return retval = new InterpParser.parallel_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken PARALLEL17 = null;
        IToken OPENBRACE19 = null;
        IToken CLOSEBRACE21 = null;
        IToken END_OF_STATEMENT22 = null;
        InterpParser.loop_return loop18 = null;

        InterpParser.matscalassignment_return matscalassignment20 = null;


        object PARALLEL17_tree=null;
        object OPENBRACE19_tree=null;
        object CLOSEBRACE21_tree=null;
        object END_OF_STATEMENT22_tree=null;


        retval.ret = new Parallel_For();

        try 
    	{
            // Interp.g:72:1: ( PARALLEL loop OPENBRACE matscalassignment CLOSEBRACE END_OF_STATEMENT )
            // Interp.g:73:1: PARALLEL loop OPENBRACE matscalassignment CLOSEBRACE END_OF_STATEMENT
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PARALLEL17=(IToken)Match(input,PARALLEL,FOLLOW_PARALLEL_in_parallel295); 
            		PARALLEL17_tree = (object)adaptor.Create(PARALLEL17);
            		adaptor.AddChild(root_0, PARALLEL17_tree);

            	PushFollow(FOLLOW_loop_in_parallel297);
            	loop18 = loop();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, loop18.Tree);
            	   retval.ret.setLhs(((loop18 != null) ? loop18.ret : null));        
            	OPENBRACE19=(IToken)Match(input,OPENBRACE,FOLLOW_OPENBRACE_in_parallel322); 
            		OPENBRACE19_tree = (object)adaptor.Create(OPENBRACE19);
            		adaptor.AddChild(root_0, OPENBRACE19_tree);

            	PushFollow(FOLLOW_matscalassignment_in_parallel331);
            	matscalassignment20 = matscalassignment();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, matscalassignment20.Tree);
            	   retval.ret.setRhs(((matscalassignment20 != null) ? matscalassignment20.ret : null));  
            	CLOSEBRACE21=(IToken)Match(input,CLOSEBRACE,FOLLOW_CLOSEBRACE_in_parallel346); 
            		CLOSEBRACE21_tree = (object)adaptor.Create(CLOSEBRACE21);
            		adaptor.AddChild(root_0, CLOSEBRACE21_tree);

            	END_OF_STATEMENT22=(IToken)Match(input,END_OF_STATEMENT,FOLLOW_END_OF_STATEMENT_in_parallel348); 
            		END_OF_STATEMENT22_tree = (object)adaptor.Create(END_OF_STATEMENT22);
            		adaptor.AddChild(root_0, END_OF_STATEMENT22_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "parallel"

    public class matscalassignment_return : ParserRuleReturnScope
    {
        public MatScalAssignment ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "matscalassignment"
    // Interp.g:82:1: matscalassignment returns [ MatScalAssignment ret] : matindex ASSIGNMENT matscaladd END_OF_STATEMENT ;
    public InterpParser.matscalassignment_return matscalassignment() // throws RecognitionException [1]
    {   
        InterpParser.matscalassignment_return retval = new InterpParser.matscalassignment_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken ASSIGNMENT24 = null;
        IToken END_OF_STATEMENT26 = null;
        InterpParser.matindex_return matindex23 = null;

        InterpParser.matscaladd_return matscaladd25 = null;


        object ASSIGNMENT24_tree=null;
        object END_OF_STATEMENT26_tree=null;


            retval.ret = new MatScalAssignment();

        try 
    	{
            // Interp.g:86:1: ( matindex ASSIGNMENT matscaladd END_OF_STATEMENT )
            // Interp.g:88:1: matindex ASSIGNMENT matscaladd END_OF_STATEMENT
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_matindex_in_matscalassignment367);
            	matindex23 = matindex();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, matindex23.Tree);
            	 retval.ret.setLhs(((matindex23 != null) ? matindex23.ret : null)); 
            	ASSIGNMENT24=(IToken)Match(input,ASSIGNMENT,FOLLOW_ASSIGNMENT_in_matscalassignment373); 
            		ASSIGNMENT24_tree = (object)adaptor.Create(ASSIGNMENT24);
            		adaptor.AddChild(root_0, ASSIGNMENT24_tree);

            	PushFollow(FOLLOW_matscaladd_in_matscalassignment376);
            	matscaladd25 = matscaladd();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, matscaladd25.Tree);
            	 retval.ret.setRhs(((matscaladd25 != null) ? matscaladd25.ret : null));  
            	END_OF_STATEMENT26=(IToken)Match(input,END_OF_STATEMENT,FOLLOW_END_OF_STATEMENT_in_matscalassignment380); 
            		END_OF_STATEMENT26_tree = (object)adaptor.Create(END_OF_STATEMENT26);
            		adaptor.AddChild(root_0, END_OF_STATEMENT26_tree);


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "matscalassignment"

    public class matscaladd_return : ParserRuleReturnScope
    {
        public MatScalAdd ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "matscaladd"
    // Interp.g:94:1: matscaladd returns [MatScalAdd ret] : el1= variable '+' el2= matindex ;
    public InterpParser.matscaladd_return matscaladd() // throws RecognitionException [1]
    {   
        InterpParser.matscaladd_return retval = new InterpParser.matscaladd_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken char_literal27 = null;
        InterpParser.variable_return el1 = null;

        InterpParser.matindex_return el2 = null;


        object char_literal27_tree=null;


        retval.ret = new MatScalAdd();

        try 
    	{
            // Interp.g:98:1: (el1= variable '+' el2= matindex )
            // Interp.g:99:1: el1= variable '+' el2= matindex
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_variable_in_matscaladd401);
            	el1 = variable();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, el1.Tree);
            	 retval.ret.setLhs(((el1 != null) ? el1.ret : null)); 
            	char_literal27=(IToken)Match(input,PLUS,FOLLOW_PLUS_in_matscaladd405); 
            		char_literal27_tree = (object)adaptor.Create(char_literal27);
            		adaptor.AddChild(root_0, char_literal27_tree);

            	PushFollow(FOLLOW_matindex_in_matscaladd409);
            	el2 = matindex();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, el2.Tree);
            	 retval.ret.setRhs(((el2 != null) ? el2.ret : null)); 

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }
        catch (RecognitionException re) 
    	{
            ReportError(re);
            Recover(input,re);
    	// Conversion of the second argument necessary, but harmless
    	retval.Tree = (object)adaptor.ErrorNode(input, (IToken) retval.Start, input.LT(-1), re);

        }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "matscaladd"

    public class matindex_return : ParserRuleReturnScope
    {
        public MatIndex ret;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "matindex"
    // Interp.g:104:1: matindex returns [MatIndex ret] : MATINDEX ;
    public InterpParser.matindex_return matindex() // throws RecognitionException [1]
    {   
        InterpParser.matindex_return retval = new InterpParser.matindex_return();
        retval.Start = input.LT(1);
